Tue Jun 29 17:54:23 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.h:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:

          Fix for a segmentation fault that would occur when plans
          with similar UUIDs were deployed/torn down in sequence.

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Temperorarily disable thread pool in the NodeApplication.  This
          is expected to be re-enabled in the next release.

Tue Jun 29 14:49:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:

          Moved the plugin manager cleanup to the node manager.

Tue Jun 29 14:37:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/OMG-CCM-Tutorial.pptx:
          Changes regarding DDS4CCM connector.

Tue Jun 29 14:35:04 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/docs/TestCoverage.odt
        New doc, describing AMI4CCM tests.

Tue Jun 29 14:29:36 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/MPC/config/dance_split_plan.mpb:

          Removed a redundant "includes" that used an incorrect
          syntax for environment variables: it used $FOO instead of $(FOO).

Tue Jun 29 14:13:45 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ciao/Base/CIAO_Base.mpc:

          Corrected the name of the export header.

Tue Jun 29 13:12:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated

Tue Jun 29 13:09:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/NodeManager-NodeApplicationManager/NodeManager-NodeApplicationManager.mpc:
          Fixed nmake warning

        * connectors/dds4ccm/impl/Publisher_T.cpp: