@@ -18,13 +18,13 @@
   <h1>IDL files</h1>
   <p>
     The IDL files are generated by the modeling tools.<br/>
-    To understand this shapes tutorial better, it'll give an overview of
+    To understand this shapes tutorial better, the following is an overview of
     which IDL files are generated.
   </p>
 
   <h2>Common IDL files</h2>
   <p>
-    Below an simplied represenation of the common IDL files. Use the links to view
+    Below a simplied represenation of the common IDL files. Use the links to view
     the file itself.<br/>
     The following IDL files can be found in Shapes_asm/ports:
     <ul>
@@ -58,10 +58,13 @@
             };<br/>
           </code>
           The ShapeType struct is the the data structure that is send from the
-          sender to the receiver through DDS. In DDS this struct is called a sample.<br/>
-          This file is also used as input for the RTI DDS generator. Since we're
-          using RTI DDS in this example, the key of this struct is defined with
-          <code>//@key</code> as shown above.
+          sender to the receiver through DDS. In DDS, a single instantiation
+          of this struct is called a sample.<br/>
+          This file is also used as input for the RTI DDS code generator (rtiddsgen). Since we're
+          using RTI DDS in this example, the key value for this struct is defined with
+          <code>//@key</code> as shown above.  The key value indicates to DDS that
+          QoS features may apply to every unique instance of  the color field
+          (e.g. a "red" square is a different instance than a "green" square).
       </li>
     </ul>
   </p>
@@ -69,7 +72,7 @@
   <h2>Controller IDL files</h2>
   <p>
     The controller is used to modify the location and the size of the registered
-    shape. The controller invokes methods on the sender component to establish this.
+    shape by invoking methods on the sender component.
     These methods are part of an interface which the sender should provide. The
     controller uses this interface.<br/>
     The interface declaration is in
@@ -155,8 +158,7 @@
       Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.idl<a><br/>
   </p>
   <p>
-    The Sender uses the DDS_Write port of the DDS4CCM connector. This means that
-    the Sender is able to write data to DDS.<br/>
+    The Sender uses the DDS_Write port of the DDS4CCM connector to write data to DDS.<br/>
     The Sender provides the Control_obj interface to the Controller component. This
     means that the sender component implements the Control_obj interface so that the
     controller is able to invoke the provided methods.
