@@ -19,9 +19,9 @@
   <p>
     The DDS4CCM connector itself is a CCM component placed between your component
     and DDS itself.<br/>
-    In DDS there're basically two entities: DataWriters and DataReaders.
-    To gain access to these entities, the DDS4CCM connector offers two basic types
-    of ports (connectors) : DDS_Event and DDS_State.
+    In DDS there're basically two entities which exchange data: DataWriters and
+    DataReaders. To gain access to these entities, the DDS4CCM connector offers
+    two basic types of ports (connectors) : DDS_Event and DDS_State.
     These basic ports have extended ports which allow the user to access the actual
     datareaders and datawriters. It'll depend on the functionality of your component
     which type of basic port you're going to use.<br/>
